--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 	
 			<br><b>Sentiment Analysis</b></br>
 			<ul class="work-list">
+			<li>M. Hou, Z. Zhang*, G. Lu, Multi-modal Emotion Recognition with Self-guided Modality Calibration, in Proc. of The International Conference on Acoustics, Speech, & Signal Processing (ICASSP), 2022. (CCF B)</li>
 			<li>M. Hou, Z. Zhang*, Q. Cao, D. Zhang, G. Lu, Multi-view Speech Emotion Recognition via Collective Relation Construction, IEEE Transactions on Audio, Speech, and Language Processing (TASLP), 2022. (*Corresponding author, CCF B, Q1)</li>			
 			<li>Y. Li, Z. Zhang*, B. Chen, G. Lu, D. Zhang, Deep Margin-Sensitive Representation Learning for Cross-Domain Facial Expression Recognition, IEEE Transactions on Multimedia (TMM), DOI: 10.1109/TMM.2022.3141604, 2022. (CCF B, TOP, Q1)</li>				
 			<li>B. Chen, Q. Cao, M. Hou, Z. Zhang*, G. Lu*, D. Zhang, Multimodal Emotion Recognition with Temporal and Semantic Consistency, IEEE Transactions on Audio, Speech, and Language Processing (TASLP), 2021. (*Corresponding author, CCF B, Q1)</li>				
