--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			IEEE <b>TNNLS</b> (x10, IF: 10.451), IEEE <b>TIP</b> (x4, CCF A, IF: 10.856), IEEE <b>TKDE</b> (x2, CCF A, IF: 6.977), IEEE <b>TCYB</b> (x4, IF: 11.448), IEEE <b>TSMCA</b> (IF: 13.451),
 			IEEE <b>TAC</b> (IF: 10.506), IEEE <b>TIFS</b> (CCF A, IF: 7.178), IEEE <b>TMM</b> (x6, IF: 6.513), IEEE <b>TASLP</b> (x2, IF: 3.919), ACM <b>TKDD</b> (IF: 2.713), ACM <b>TOMM</b> (x3, IF: 3.144), 
 			IEEE <b>TCSVT</b> (x8, IF: 4.685), <b>PR</b> (x2, IF: 7.740), <b>Information Fusion</b> (x2, IF: 12.975), <b>NN</b> (IF: 8.050), <b>INS</b> (IF: 6.795), <b>PRL</b> (IF: 3.756), 
-			<b>IP&M</b> (IF: 6.222), <b>KBS</b> (IF: 8.038), <b>AIHC</b> (IF: 7.104),
+			<b>IP&M</b> (IF: 6.222), <b>KBS</b> (IF: 8.038), <b>AIHC</b> (IF: 7.104), <b>WWW</b> (IF: 2.716),
 			<b>NeurCom</b> (IF: 5.719), <b>NCAA</b> (IF: 5.606), <b>NPL</b> (IF: 2.908), <b>SP</b> (IF: 4.662),
 			<b>MTAP</b> (IF: 2.757), <b>EAAI</b> (IF: 6.212), and top conferences, including <b>CVPR</b> (x2, CCF A), <b>ICCV</b> (CCF A), 
 			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A),  <b>ACMM</b> (x9, CCF A), etc.</p>
