--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 			<ul class="work-list">
 			<li>Z. Zhang, H. Luo, L. Zhu, G. Lu, H. T. Shen, Modality-Invariant Asymmetric Networks for Cross-Modal Hashing, IEEE Transactions on Knowledge and Data Engineering (TKDE), 2022. (CCF A, Q1, TOP)</li>
 			<li>Z. Zhang*, J. Wang, G. Lu, Towards Discriminative Visual Search via Semantically Cycle-consistent Hashing Networks, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
-			<li>S. Zhao, B. Chen, Z. Zhang*, G. Lu, An Embarrassingly Simple Approachto Discrete Supervised Hashing, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
+			<li>S. Zhao, B. Chen, Z. Zhang*, G. Lu, An Embarrassingly Simple Approach to Discrete Supervised Hashing, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
 			<li>J. An, H. Luo, Z. Zhang*, L. Zhu, G. Lu, Cognitive Multi-modal Consistent Hashing with Flexible Semantic Transformation, Information Processing and Management (IP&M), 2021. (CCF B, Q1, TOP)</li>
-			<li>X. Wu, L. Zhu, L. Xie, Z. Zhang, H. Zhang, Multi-modal Discrete Tensor Decomposition Hashing for Efficient Multimedia Retrieval, Neurocomputing, 2021. (CCF C, Q1, TOP)</li>					
+			<li>X. Wu, L. Zhu, L. Xie, Z. Zhang, H. Zhang, Multi-modal Discrete Tensor Decomposition Hashing for Efficient Multimedia Retrieval, Neurocomputing, 2021. (CCF C, Q1)</li>					
                         <li>Y. Chen, S. Wang, J. Lu, Z. Chen,Z. Zhang*, Z. Huang, Local Graph Convolutional Networks for Cross-Modal Hashing, in Proc. of The 29th ACM International Conference on Multimedia (ACMM), 2021. (CCF A) </li>
 			<li>H. Cui, L. Zhu, J. Li, Z. Cheng, Z. Zhang, Two-pronged Strategy: Lightweight Augmented Graph Network Hashing for Scalable Image Retrieval, in Proc. of The 29th ACM International Conference on Multimedia (ACMM), 2021. (CCF A) </li>				
 			<li>Z. Zhang*, X. Wang, G. Lu, F. Shen, L. Zhu, Targeted Attack of Deep Hashing via Prototype-supervised Adversarial Networks, IEEE Transactions on Multimedia (TMM), 2021. (CCF B, Q1, TOP)</li>
