--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<li>Y. Tong, Y. Luo, Z. Zhang, S. Sadiq and P. Cui, Collaborative Generative Adversarial Network for Recommendation Systems, in Proc. of IEEE International Conference on Data Engineering (ICDE) Workshops, 2019.</li>
 			<li>Z. Zhang, L. Shao, Y. Xu, L. Liu, J. Yang, Marginal Representation Learning With Graph Structure Self-Adaptation, IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 29(10): 4645-4659, 2018. (CCF B, Q1, TOP) </li>
 			<li>Z. Zhang, Y. Xu, L. Shao, J. Yang, Discriminative Block-Diagonal Representation Learning for Image Recognition, IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 29(7): 3111-3125, 2018. (CCF B, Q1, TOP)</li>
-			<li>Z. Li, Z. Zhang, Z. Fan, J. Wen, An Interactively Constrained Discriminative Dictionary Learning Algorithm for Image Classification, Engineering Applications of Artificial Intelligence, vol. 72, pp. 241-252, 2018. (CCF C, Q1)</li>
+			<li>Z. Li, Z. Zhang, Z. Fan, J. Wen, An Interactively Constrained Discriminative Dictionary Learning Algorithm for Image Classification, Engineering Applications of Artificial Intelligence (EAAI), vol. 72, pp. 241-252, 2018. (CCF C, Q1, TOP)</li>
 			<li>J. Wen, L. Fei, Z. Zhang*, J. Wu, X. Fang, Adaptive Locality Preserving Based Discriminative Regression, in Proc. of International Conference on Pattern Recognition (ICPR), 2018. (CCF C)</li>
 			<li>Z. Zhang, Z. Lai, Y. Xu, L. Shao, J. Wu, G. Xie, Discriminative Elastic-Net Regularized Linear Regression, IEEE Transactions on Image Processing (TIP), 26(3): 1466-1481, 2017. (CCF A, Q1, TOP)</li>
 			<li>Z. Zhang, Z. Zhong, J. Cui, L. Fei, Learning Robust Latent Subspace for Discriminative Regression, in Proc. of Visual Communications and Image Processing (VCIP), 2017 (Oral). </li>
