--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 			<li>Z. Zhang, Z. Lai, Z. Huang, W. Wong, G. Xie, L. Liu, L. Shao, Scalable Supervised Asymmetric Hashing with Semantic and Latent Factor Embedding, IEEE Transactions on Image Processing (TIP), 28(10): 4803 - 4818, 2019. (CCF A, Q1, TOP) </li>
 			<li>Y. Ding, W. K. Wong , Z. Lai, Z. Zhang, Bilinear Supervised Hashing Based on 2D Image Features, IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), DOI:10.1109/TCSVT.2019.2891246, 2019. (CCF B, Q1, TOP) </li>
 			<li>Y. Gu, H. Zhang, Z. Zhang, Q. Ye, Unsupervised Deep Triplet Hashing with Pseudo Triplets for Scalable Image Retrieval, Multimedia Tools and Applications (MTAP), DOI: 10.1007/s11042-019-7687-0, 2019. (CCF C, Q2)</li>
+			<li>X. Shen, H. Zhang, L. Li, Z. Zhang, D. Chen, L. Liu, Clustering-driven Deep Adversarial Hashing for scalable unsupervised cross-modal retrieval, Neurocomputing, vol. 459, pp. 152-164, 2021. (CCF C, Q1)</li>	
 			</ul>
 	
 			<br><b>Sentiment Analysis</b></br>
