--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 			
 			<br><b>Efficient Information Retrieval</b></br>
 			<ul class="work-list">
+			<li>Z. Zhang, C. M. Pun, Learning Ordinal Constraint Binary Codes for Fast Similarity Search, Information Processing and Management (IPM), 2022. (CCF B, Q1, TOP)</li>	
 			<li>Z. Zhang, H. Luo, L. Zhu, G. Lu, H. T. Shen, Modality-Invariant Asymmetric Networks for Cross-Modal Hashing, IEEE Transactions on Knowledge and Data Engineering (TKDE), 2022. (CCF A, Q1, TOP)</li>
 			<li>Z. Zhang*, J. Wang, G. Lu, Towards Discriminative Visual Search via Semantically Cycle-consistent Hashing Networks, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
 			<li>S. Zhao, B. Chen, Z. Zhang*, G. Lu, An Embarrassingly Simple Approach to Discrete Supervised Hashing, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
