--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<b>MTAP</b> (IF: 2.757), <b>EAAI</b> (IF: 6.212), and top conferences, including <b>CVPR</b> (x2, CCF A), <b>ICCV</b> (CCF A), 
 			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A),  <b>ACMM</b> (x9, CCF A), etc.</p>
 			<br><b>Multimodal Machine Learning</b></br>
-			<ul class="work-list">
+			<ol class="work-list" reversed>
 			<li>W. He, Z. Zhang*, Y. Chen, J. Wen, Structured Anchor-inferred Graph Learning for Universal Incomplete Multi-view Clustering, World Wide Web: Internet and Web Information Systems (WWWJ), 2022. (CCF B, Q2)</li>	
 			<li>D. Shi, L. Zhu, J. Li, Z. Cheng, Z. Zhang, Flexible Multi-view Spectral Clustering with Self-adaptation, IEEE Transactions on Cybernetics (TCYB), 2021. (CCF B, Q1, TOP)</li>		
 			<li>J. Wen, Z. Wu, Z. Zhang*, L. Fei, B. Zhang, Y. Xu, Structural Deep Incomplete Multi-view Clustering Network, in Proc. of The Conference on Information and Knowledge Management (CIKM), 2021. (CCF B) </li>					
@@ -84,10 +84,10 @@
 			<li>Z. Zhang, L. Liu, J. Qin, F. Zhu, F. Shen, Y. Xu, L. Shao, H. T. Shen, Highly-Economized Multi-View Binary Compression for Scalable Image Clustering, in Proc. of The European Conference on Computer Vision (ECCV), Munich, Germany, pp. 717-732, 2018. [Oral – Acceptance Rate: 2.4%] (CCF B)</li>
 			<li>J. Wen*, Z. Zhang* (Co-First), Z. Zhong, Y. Xu, Incomplete Multi-view Clustering via Graph Regularized Matrix Factorization, in Proc. of European Conference on Computer Vision Workshops (ECCVW), 2018.</li>
 			<li>G.-S. Xie, X.-B. Jin, Z. Zhang, Z. Liu, X. Xue, J. Pu, Retargeted Multi-View Feature Learning With Separate and Shared Subspace Uncovering, IEEE Access, vol. 5, 24895-24907, 2017. (Q1)</li>
-			</ul>
+			</ol>
 			
 			<br><b>Efficient Information Retrieval</b></br>
-			<ul class="work-list">
+			<ol class="work-list" reversed>
 			<li>Z. Zhang, C. M. Pun, Learning Ordinal Constraint Binary Codes for Fast Similarity Search, Information Processing and Management (IP&M), 2022. (CCF B, Q1, TOP)</li>	
 			<li>Z. Zhang, H. Luo, L. Zhu, G. Lu, H. T. Shen, Modality-Invariant Asymmetric Networks for Cross-Modal Hashing, IEEE Transactions on Knowledge and Data Engineering (TKDE), 2022. (CCF A, Q1, TOP)</li>
 			<li>Z. Zhang*, J. Wang, G. Lu, Towards Discriminative Visual Search via Semantically Cycle-consistent Hashing Networks, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
@@ -116,10 +116,10 @@
 			<li>Y. Ding, W. K. Wong , Z. Lai, Z. Zhang, Bilinear Supervised Hashing Based on 2D Image Features, IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), DOI:10.1109/TCSVT.2019.2891246, 2019. (CCF B, Q1, TOP) </li>
 			<li>Y. Gu, H. Zhang, Z. Zhang, Q. Ye, Unsupervised Deep Triplet Hashing with Pseudo Triplets for Scalable Image Retrieval, Multimedia Tools and Applications (MTAP), DOI: 10.1007/s11042-019-7687-0, 2019. (CCF C, Q2)</li>
 			<li>X. Shen, H. Zhang, L. Li, Z. Zhang, D. Chen, L. Liu, Clustering-driven Deep Adversarial Hashing for scalable unsupervised cross-modal retrieval, Neurocomputing, vol. 459, pp. 152-164, 2021. (CCF C, Q1)</li>	
-			</ul>
+			</ol>
 	
 			<br><b>Sentiment Analysis</b></br>
-			<ul class="work-list">
+			<ol class="work-list" reversed>
 			<li>M. Hou, Z. Zhang*, G. Lu, Multi-modal Emotion Recognition with Self-guided Modality Calibration, in Proc. of The International Conference on Acoustics, Speech, & Signal Processing (ICASSP), 2022. (CCF B)</li>
 			<li>M. Hou, Z. Zhang*, Q. Cao, D. Zhang, G. Lu, Multi-view Speech Emotion Recognition via Collective Relation Construction, IEEE Transactions on Audio, Speech, and Language Processing (TASLP), 2022. (*Corresponding author, CCF B, Q1, TOP)</li>			
 			<li>Y. Li, Z. Zhang*, B. Chen, G. Lu, D. Zhang, Deep Margin-Sensitive Representation Learning for Cross-Domain Facial Expression Recognition, IEEE Transactions on Multimedia (TMM), DOI: 10.1109/TMM.2022.3141604, 2022. (CCF B, Q1, TOP)</li>				
@@ -129,10 +129,10 @@
 			<li>Y. Li, Y. Gao, B. Chen, Z. Zhang*, L. Zhu, G. Lu*, JDMAN: Joint Discriminative and Mutual Adaptation Networks for Cross-Domain Facial Expression Recognition, in Proc. of The 29th ACM International Conference on Multimedia (ACMM), 2021. (CCF A) </li>				
 			<li>Q. Cao, M. Hou, B. Chen, Z. Zhang*, G. Lu, Hierarchical Network based on the Fusion of Static and Dynamic Features for Speech Emotion Recognition, in Proc. of the 45th International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2021. (CCF B)</li>
 			<li>Y. Li, G. Lu*, J. Li, Z. Zhang*, D. Zhang, Facial Expression Recognition in the Wild Using Multi-level Features and Attention Mechanisms, IEEE Transactions on Affective Computing (TAC), DOI: 10.1109/TAFFC.2020.3031602, 2020. (CCF B, Q1, TOP)</li> 
-			</ul>
+			</ol>
 	
 			<br><b>Medical Image Analysis</b></br>
-			<ul class="work-list">
+			<ol class="work-list" reversed>
 			<li>S. Lu, Z. Zhang, Y. Zhang, S. Wang, CGENet: A Deep Graph Model for COVID-19 Detection based on Chest CT, Biology-Basel, 2022. (Co-first author, Q1)</li>
 			<li>Y.-D. Zhang#, Z. Zhang#, X. Zhang, S.-H. Wang, MIDCAN: A multiple input deep convolutional attention network for Covid-19 diagnosis based on chest CT and chest X-ray, Pattern Recognition Letters (PRL), 150: 8-16, 2021. (CCF C, Q1)</li>
 			<li>B. Chen, Z. Zhang*, Y. Li, G. Lu, D. Zhang, Multi-Label Chest X-ray Image Classification via Semantic Similarity Graph Embedding, IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2021. (CCF B, Q1, TOP)</li>
@@ -140,10 +140,10 @@
 			<li>X. Zhu, H. Li, H. T. Shen, Z. Zhang, Y. Ji, Y. Fan, Fusing Functional Connectivity with Network Nodal Information for Sparse Network Pattern Learning of Functional Brain Networks, Information Fusion (INFFUS), 75: 131-139, 2021. (CCF B, Q1, TOP)</li>
 			<li>S. Lu, D. Wu, Z. Zhang*, S. Wang, An Explainable Framework for Diagnosis of COVID-19 Pneumonia via Transfer Learning and DCA, ACM Transactions on Multimedia Computing Communications and Applications (TOMM), 2021. (CCF B, Q1)</li>					
 			<li>B. Chen#, Z. Zhang#, J. Lin, Y. Chen, G. Lu, Two-Stream Collaborative Network for Multi-label Chest X-ray Image Classification with Lung Segmentation, Pattern Recognition Letters (PRL), 135: 221-227, 2020. (#Co-first author, CCF C, Q1)</li>
-			</ul>
+			</ol>
 
 			<br><b>Few-Shot Learning</b></br>
-			<ul class="work-list">
+			<ol class="work-list" reversed>
 			<li>G.-S. Xie, Z. Zhang*, H. Xiong, L. Shao, Towards Zero-Shot Learning: A Brief Review and an Attention-based Embedding Network, IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2021. (CCF B, Q1, TOP) </li>	
 			<li>T. Chen, Z. Zhang*, G.-S. Xie, S.-H. Wang, Z. Tang, Q. Wang, Enhanced Feature Alignment for Unsupervised Domain Adaptation of Semantic Segmentation, IEEE Transactions on Multimedia (TMM), 2021. (CCF B, Q1, TOP)</li>
 			<li>Z. Chen, Y. Luo, R. Qiu, S. Wang, Z. Huang, J. Li, Z. Zhang, Semantics Disentangling for Generalized Zero-Shot Learning, in Proc. of International Conference on Computer Vision (ICCV), 2021. (CCF A)</li>
@@ -160,10 +160,10 @@
 			<li>Y. Luo, Z. Huang, Z. Zhang*, Z. Wang, M. Baktashmotlagh, Y. Yang, Learning from the Past: Continual Meta-Learning with Bayesian Graph Neural Networks, in Proc. of The Thirty-Four AAAI Conference on Artificial Intelligence (AAAI), New York, USA, 2020. (CCF A, *indicates Corresponding Author) [Acceptance Rate: 20.6%]. </li>
 			<li>G. Xie, L. Liu, X. Jin, F. Zhu, Z. Zhang, J. Qin, Y. Yao, L. Shao, Attentive Region Embedding Network for Zero-shot Learning, in Proc. of IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, USA, 2019. (CCF A)</li>
 			<li>Y. Wang, H. Zhang, Z. Zhang, Y. Long, Asymmetric Graph based Zero-Shot Learning, Multimedia Tools and Applications (MTAP), DOI: 10.1007/s11042-019-7689-y, 2019. (CCF C, Q2)</li>
-			</ul>
+			</ol>
 
 			<br><b>Compact Representation Learning</b></br>
-			<ul class="work-list">
+			<ol class="work-list" reversed>
 			<li>Y. Zhang, Z. Zhang, Y. Wang, Z. Zhang, L. Zhang, S. Yan, M. Wang, Dual-constrained Deep Semi-Supervised Coupled Factorization Network with Enriched Prior, International Journal of Computer Vision (IJCV), 2021. (CCF A, Q1, TOP)</li>
 			<li>B. Chen, Z. Zhang*, Y. Lu, F. Chen, G. Lu, D. Zhang, Semantic-Interactive Graph Convolutional Network for Multi-label Image Recognition, IEEE Transactions on Systems, Man and Cybernetics: Systems (TSMCA), 2021. (CCF B, Q1, TOP)</li>
 			<li>G. Dong, C.-M. Pun, Z. Zhang, Kinship Veriﬁcation Based on Cross-Generation Feature Interaction Learning, IEEE Transactions on Image Processing (TIP), 2021. (CCF A, Q1, TOP)</li>					
@@ -222,7 +222,7 @@
 			<li>K. Yan, J. Zhang, Z. Zhang, Z. He, Y. Xu, A New Fusion Algorithm based ESRC and LRC, in Proc. of International Conference on Artificial Intelligence and Software Engineering (AISE), pp. 393-399, 2014.</li>
 			<li>Z. Zhang, Z. Li, B. Xie, et al. Integrating Globality and Locality for Robust Representation Based Classification, Mathematical Problems in Engineering, 2014. (SCI)</li>
 			<li>H Zhang, Z. Zhang, Z Li, Y Chen, J Shi, Improving representation-based classification for robust face recognition, Journal of Modern Optics, 61 (11), 961-968, 2014. (SCI)</li>
-			</ul>
+			</ol>
 
 			<br><b><a href="https://cszhengzhang.github.io/"><font color="Brown">Homepage</font></b></a> || <b><a href="https://cszhengzhang.github.io/FullPub/"><font color="Brown">Publication By Year</font></b></a></br>
 		</div>
