--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		-->
 		<p>
 		<font color="00008B"><b>"Happiness depends upon ourselves." — Aristotle</b></font><br>
-		<font color="330000"><b>"The more I learn, the more I realize how much I don't know."  — Albert Einstein</b></font><br>
+		<font color="330000"><b>"The more I learn, the more I realize how much I don't know."  — Albert Einstein</b></font>
 		</p>
 	</div>
 </div>
