--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<!-- Publications -->
 	<div class="Publications" id="publications">
 		<div class="container">
-			<font size = "5.5" face = "Georgia" color="Brown"><b>Full Publication</b></font><br>
+			<font size = "5.5" face = "Georgia" color="Brown"><b>Full Publication by Topics</b></font><br>
 			<br><b><a href="https://cszhengzhang.github.io/"><font color="Brown">Homepage</font></b></a> || <b><a href="https://cszhengzhang.github.io/FullPub/"><font color="Brown">Publication By Year</font></b></a></br>
 			<p>Highly-influenced research papers published in various prestigious journals including <font color="Blue"><b>IEEE TPAMI</b></font> (CCF A, IF: 16.389), <b>IJCV</b> (CCF A, IF: 7.410),
 			IEEE <b>TNNLS</b> (x10, IF: 10.451), IEEE <b>TIP</b> (x4, CCF A, IF: 10.856), IEEE <b>TKDE</b> (x2, CCF A, IF: 6.977), IEEE <b>TCYB</b> (x4, IF: 11.448), IEEE <b>TSMCA</b> (IF: 13.451),
