--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 			
 			<br><b>Efficient Information Retrieval</b></br>
 			<ol class="work-list" reversed>
+			<li>Z. Zhang, J. Wang, L. Zhu, G. Lu, Discriminative Visual Similarity Search with Semantically Cycle-consistent Hashing Networks, ACM Transactions on Multimedia Computing, Communications, and Applications (TOMM), 2022. (CCF B, Q1)</li>
 			<li>Z. Zhang, C. M. Pun, Learning Ordinal Constraint Binary Codes for Fast Similarity Search, Information Processing and Management (IP&M), vol. 59, no. 3, pp. 102919, 2022. (CCF B, Q1, TOP)</li>	
 			<li>Z. Zhang, H. Luo, L. Zhu, G. Lu, H. T. Shen, Modality-Invariant Asymmetric Networks for Cross-Modal Hashing, IEEE Transactions on Knowledge and Data Engineering (TKDE), 2022. (CCF A, Q1, TOP)</li>
 			<li>Z. Zhang*, J. Wang, G. Lu, Towards Discriminative Visual Search via Semantically Cycle-consistent Hashing Networks, in Proc. of ACM International Conference on Multimedia in Asia (MMAsia), 2021. (*Corresponding author)</li>
