--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A),  <b>ACMM</b> (x9, CCF A), etc.</p>
 			<br><b>Multimodal Machine Learning</b></br>
 			<ol class="work-list" reversed>
+			<li>C. Zhu, W. He, Z. Zhang*, Deep Factorized Multi-view Hashing for Image Retrieval, in Proc. of EAI International Conference on Multimedia Technology and Enhanced Learning (ICMTEL), 2022. [Best Paper Award]</li>
 			<li>W. He, Z. Zhang*, Y. Chen, J. Wen, Structured Anchor-inferred Graph Learning for Universal Incomplete Multi-view Clustering, World Wide Web: Internet and Web Information Systems (WWWJ), 2022. (CCF B, Q2)</li>	
 			<li>D. Shi, L. Zhu, J. Li, Z. Cheng, Z. Zhang, Flexible Multi-view Spectral Clustering with Self-adaptation, IEEE Transactions on Cybernetics (TCYB), 2021. (CCF B, Q1, TOP)</li>		
 			<li>J. Wen, Z. Wu, Z. Zhang*, L. Fei, B. Zhang, Y. Xu, Structural Deep Incomplete Multi-view Clustering Network, in Proc. of The Conference on Information and Knowledge Management (CIKM), 2021. (CCF B) </li>					
