--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 		<div class="container">
 			<font size = "5.5" face = "Georgia" color="Brown"><b>Full Publication by Topics</b></font><br>
 			<br><b><a href="https://cszhengzhang.github.io/"><font color="Brown">Homepage</font></b></a> || <b><a href="https://cszhengzhang.github.io/FullPub/"><font color="Brown">Publication By Year</font></b></a></br>
-			<p>Highly-influenced research papers published in various prestigious journals including <font color="Blue"><b>IEEE TPAMI</b></font> (CCF A, IF: 16.389), <b>IJCV</b> (CCF A, IF: 7.410),
-			IEEE <b>TNNLS</b> (x10, IF: 10.451), IEEE <b>TIP</b> (x4, CCF A, IF: 10.856), IEEE <b>TKDE</b> (x2, CCF A, IF: 6.977), IEEE <b>TCYB</b> (x4, IF: 11.448), IEEE <b>TSMCA</b> (IF: 13.451),
-			IEEE <b>TAC</b> (IF: 10.506), IEEE <b>TIFS</b> (CCF A, IF: 7.178), IEEE <b>TMM</b> (x6, IF: 6.513), IEEE <b>TASLP</b> (x2, IF: 3.919), ACM <b>TKDD</b> (IF: 2.713), ACM <b>TOMM</b> (x3, IF: 3.144), 
-			IEEE <b>TCSVT</b> (x8, IF: 4.685), <b>PR</b> (x2, IF: 7.740), <b>Information Fusion</b> (x2, IF: 12.975), <b>NN</b> (IF: 8.050), <b>INS</b> (IF: 6.795), <b>PRL</b> (IF: 3.756), 
-			<b>IP&M</b> (IF: 6.222), <b>KBS</b> (IF: 8.038), <b>AIHC</b> (IF: 7.104), <b>WWW</b> (IF: 2.716),
-			<b>NeurCom</b> (IF: 5.719), <b>NCAA</b> (IF: 5.606), <b>NPL</b> (IF: 2.908), <b>SP</b> (IF: 4.662),
-			<b>MTAP</b> (IF: 2.757), <b>EAAI</b> (IF: 6.212), and top conferences, including <b>CVPR</b> (x2, CCF A), <b>ICCV</b> (CCF A), 
-			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A),  <b>ACMM</b> (x9, CCF A), etc.</p>
+			<p>Highly-influenced research papers published in various prestigious journals including <font color="Blue"><b>IEEE TPAMI</b></font> (CCF A, IF: 24.314), <b>IJCV</b> (CCF A, IF: 13.369),
+			IEEE <b>TNNLS</b> (x11, IF: 14.255), IEEE <b>TIP</b> (x4, CCF A, IF: 11.041), IEEE <b>TKDE</b> (x2, CCF A, IF: 9.235), IEEE <b>TCYB</b> (x4, IF: 19.118), IEEE <b>TSMCA</b> (IF: 11.471),
+			IEEE <b>TAC</b> (IF: 13.990), IEEE <b>TIFS</b> (CCF A, IF: 7.231), IEEE <b>TMM</b> (x6, IF: 8.182), IEEE <b>TASLP</b> (x2, IF: 4.364), ACM <b>TKDD</b> (IF: 4.157), ACM <b>TOMM</b> (x4, IF: 4.094), 
+			IEEE <b>TCSVT</b> (x9, IF: 5.859), IEEE <b>TETCI</b> (x2, IF: 4.851), IEEE <b>TIM</b> (IF: 5.332), <b>PR</b> (x2, IF: 8.518), <b>Information Fusion</b> (x2, IF: 17.564), <b>NN</b> (IF: 9.657), <b>INS</b> (IF: 8.233), <b>PRL</b> (IF: 4.757), 
+			<b>IP&M</b> (IF: 7.466), <b>KBS</b> (IF: 8.139), <b>AIHC</b> (IF: 3.662), <b>WWW</b> (IF: 3.000),
+			<b>NeurCom</b> (IF: 5.779), <b>NCAA</b> (IF: 5.102), <b>NPL</b> (IF: 2.565), <b>SP</b> (IF: 4.729),
+			<b>MTAP</b> (IF: 2.577), <b>EAAI</b> (IF: 7.802), and top conferences, including <b>CVPR</b> (x2, CCF A), <b>ICCV</b> (CCF A), 
+			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A), <b>ACMM</b> (x9, CCF A), MICCAI, etc.</p>
 			<br><b>Multimodal Machine Learning</b></br>
 			<ol class="work-list" reversed>
 			<li>C. Zhu, W. He, Z. Zhang*, Deep Factorized Multi-view Hashing for Image Retrieval, in Proc. of EAI International Conference on Multimedia Technology and Enhanced Learning (ICMTEL), 2022. [Best Paper Award]</li>
