--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<b>IP&M</b> (IF: 7.466), <b>KBS</b> (IF: 8.139), <b>AIHC</b> (IF: 3.662), <b>WWW</b> (IF: 3.000),
 			<b>NeurCom</b> (IF: 5.779), <b>NCAA</b> (IF: 5.102), <b>NPL</b> (IF: 2.565), <b>SP</b> (IF: 4.729),
 			<b>MTAP</b> (IF: 2.577), <b>EAAI</b> (IF: 7.802), and top conferences, including <b>CVPR</b> (x2, CCF A), <b>ICCV</b> (CCF A), 
-			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A), <b>ACMM</b> (x9, CCF A), MICCAI, etc.</p>
+			<b>ECCV</b> (x2, TOP), <b>SIGIR</b> (x2, CCF A), <b>AAAI</b> (x6, CCF A), <b>IJCAI</b> (x3, CCF A), <b>ACMM</b> (x9, CCF A), <b>MICCAI</b>, etc.</p>
 			<br><b>Multimodal Machine Learning</b></br>
 			<ol class="work-list" reversed>
 			<li>C. Zhu, W. He, Z. Zhang*, Deep Factorized Multi-view Hashing for Image Retrieval, in Proc. of EAI International Conference on Multimedia Technology and Enhanced Learning (ICMTEL), 2022. [Best Paper Award]</li>
